--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_easyloading: ^3.0.5
   dotted_border: ^2.0.0+3
   step_progress_indicator: ^1.0.2
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +69,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
